JDK 19 virtual threads, more logging for RSI and JDBC DPAPI